src/test/deca/syntax/invalid/sansobjet/lex_floatdecmin1_invalid.deca
//Test: arrondi vers 0 erreur de compilation
// illagalargument expression ligne 3 arrondi vers 0
0.09E-47

